--- a/src/site/templates/articles/articles__detail.htm
+++ b/src/site/templates/articles/articles__detail.htm
@@ -28,6 +28,9 @@
                                 </strong>
                                 {{DESCRIPTION}}
                             </div>
+
+                            {{VIDEO}}
+                            {{PHOTOS}}
                         </article>
                         <div class="article__socials" data-animation>
                             <a href="https://t.me/share/url?url={{SHAREURL}}&text={{SHAREDESCRIPTION}}" target="_blank" class="article__social icon-telegram"></a>
