--- a/src/site/templates/articles/articles.htm
+++ b/src/site/templates/articles/articles.htm
@@ -9,7 +9,7 @@
                 </div>
                 <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
-            <div class="page__news news news-offset">
+            <div class="page__news news {{CLASS}}">
                 <div class="news__container">
                     {{FIRSTCARD}}
                     <div class="news__items">
