--- a/src/site/templates/personal/personal.htm
+++ b/src/site/templates/personal/personal.htm
@@ -1,7 +1,5 @@
 <div id="personal-data">
-    <div class="photo">
-        <img src="{{PHOTO}}" alt="{{ALT}}" title="{{ALT}}">
-    </div>
+    {{PHOTO}}
 
     <h1>{{NAME}}</h1>
     <div class="post">{{POST}}</div>
