--- a/src/site/templates/components/pagination/c-pagination__item.htm
+++ b/src/site/templates/components/pagination/c-pagination__item.htm
@@ -1,4 +1,4 @@
 <li class="pagination__item">
-                    <a href="{{LINK}}" class="pagination__link">{{NUMBER}}</a>
+                    {{HTML}}
                   </li>
                   
