--- a/layout/product.html
+++ b/layout/product.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230120201957">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20230120201957">
-	<link rel="stylesheet" href="css/style.min.css?_v=20230120201957">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230224112651">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20230224112651">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230224112651">
 
 
 </head>
@@ -440,7 +440,7 @@
                 </li>
                 <li class="footer-body__list-item">
                     <a href="" class="footer-body__list-link">
-                        Автоматические выключатели 
+                        Автоматические выключатели
                     </a>
                 </li>
                 <li class="footer-body__list-item">
@@ -496,9 +496,14 @@
             <div class="footer-copy__text">
                 © 2022 ООО “ПСК СтройИнвест”
             </div>
-            <a href="/privacy.html" class="footer-copy__privacy">
-                Политика конфиденциальности
-            </a>
+            <div class="footer-copy__privacy">
+                <a href="/privacy.html" class="footer-copy__privacy-link">
+                    Политика конфиденциальности
+                </a>
+                <a href="/privacy.html" class="footer-copy__privacy-link">
+                    Антикоррупционное законодательство
+                </a>
+            </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
                     Сделано в
@@ -511,16 +516,16 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230120201957"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230120201957"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230224112651"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20230224112651"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230120201957"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230120201957"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230120201957"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230120201957"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230120201957"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230120201957"></script>
-<script src="js/app.min.js?_v=20230120201957"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20230224112651"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20230224112651"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20230224112651"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20230224112651"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20230224112651"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20230224112651"></script>
+<script src="js/app.min.js?_v=20230224112651"></script>
 
 </body>
 
