--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -40,6 +40,9 @@
             <a href="/privacy-policy/" class="footer-copy__privacy">
                 Политика конфиденциальности
             </a>
+            <a href="/anticorruption-policy/" class="footer-copy__privacy">
+                Антикоррупционная политика
+            </a>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
                     Сделано в
