--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -37,12 +37,14 @@
             <div class="footer-copy__text">
                 &copy; {{YEAR}} ООО “ПСК СтройИнвест”
             </div>
-            <a href="/privacy-policy/" class="footer-copy__privacy">
-                Политика конфиденциальности
-            </a>
-            <a href="/anticorruption-policy/" class="footer-copy__privacy">
-                Антикоррупционная политика
-            </a>
+            <div class="footer-copy__privacy">
+                <a href="/privacy-policy/" class="footer-copy__privacy">
+                    Политика конфиденциальности
+                </a>
+                <a href="/anticorruption-policy/" class="footer-copy__privacy">
+                    Антикоррупционная политика
+                </a>
+            </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
                     Сделано в
