--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -38,10 +38,10 @@
                 &copy; {{YEAR}} ООО “ПСК СтройИнвест”
             </div>
             <div class="footer-copy__privacy">
-                <a href="/privacy-policy/" class="footer-copy__privacy">
+                <a href="/privacy-policy/" class="footer-copy__privacy-link">
                     Политика конфиденциальности
                 </a>
-                <a href="/anticorruption-policy/" class="footer-copy__privacy">
+                <a href="/anticorruption-policy/" class="footer-copy__privacy-link">
                     Антикоррупционная политика
                 </a>
             </div>
