clients-partners block update on home page

--- a/src/site/templates/components/partner/bl-partners.htm
+++ b/src/site/templates/components/partner/bl-partners.htm
@@ -6,15 +6,7 @@
                                 <a href="/company/partners/" class="companies__more more-link">Смотреть все</a>
                             </div>
                             <div class="companies__column-body">
-                                <div class="companies__item">
-                                    <picture><source srcset="/img/companies/partners/01.webp" type="image/webp"><img src="/img/companies/partners/01.png" alt="Ensto"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="/img/companies/partners/02.webp" type="image/webp"><img src="/img/companies/partners/02.png" alt="СВЕЛ"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <img src="/img/companies/partners/03.svg" alt="НИЛЕД">
-                                </div>
+                               {{LIST}}
                             </div>
                             <div class="companies__column-btn">
                                 <a href="/company/partners/" class="btn btn-orange">
