--- a/src/site/templates/components/client/bl-clients.htm
+++ b/src/site/templates/components/client/bl-clients.htm
@@ -6,15 +6,7 @@
                                 <a href="/company/clients/" class="companies__more more-link">Смотреть все</a>
                             </div>
                             <div class="companies__column-body">
-                                <div class="companies__item">
-                                    <picture><source srcset="/img/companies/customers/01.webp" type="image/webp"><img src="/img/companies/customers/01.png" alt="Роснефть"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="/img/companies/customers/02.webp" type="image/webp"><img src="/img/companies/customers/02.png" alt="Сетевая Компания"></picture>
-                                </div>
-                                <div class="companies__item">
-                                    <picture><source srcset="/img/companies/customers/03.webp" type="image/webp"><img src="/img/companies/customers/03.png" alt="Татнефть"></picture>
-                                </div>
+                                {{LIST}}
                             </div>
                             <div class="companies__column-btn">
                                 <a href="/company/clients/" class="btn btn-blue">
