--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -18,7 +18,7 @@
                                             <h1 class="production__slide-title title-lg">
                                                 Обновили парк оборудования
                                             </h1>
-                                            <a href="/complex/" class="production__slide-btn btn btn-orange">Подробнее</a>
+                                            <a href="/company/stores/" class="production__slide-btn btn btn-orange">Подробнее</a>
                                         </div>
                                     </div>
                                     <div class="production__slide swiper-slide">
@@ -28,7 +28,7 @@
                                                 Осуществляем комплексные поставки <br>
                                                 оборудования и материалов
                                             </h1>
-                                            <a href="/complex/" class="production__slide-btn btn btn-orange">Подробнее</a>
+                                            <a href="/company/stores/" class="production__slide-btn btn btn-orange">Подробнее</a>
                                         </div>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                                         Собственное <br> производство арматуры для&nbsp;СИП
                                     </span>
                                 </a>
-                                <a href="/complex/" class="production__product">
+                                <a href="/company/stores/" class="production__product">
                                     <span class="production__product-image production__product-image-offset">
                                         <picture><source srcset="/img/scaling/product-2.webp"type="image/webp"><img src="/img/scaling/product-2.png" alt="product"></picture>
                                     </span>
