--- a/src/site/templates/company/partial/company__partners__item.htm
+++ b/src/site/templates/company/partial/company__partners__item.htm
@@ -1,9 +1,9 @@
                     <div class="company">
                                 <div class="company__header">
-                                    <h2 class="company__title">
+                                    <h2 class="company__title {{CLASS}}">
                                         {{TITLE}}
                                     </h2>
-                                    <div class="company__logo{{CLASS}}">
+                                    <div class="company__logo">
                                         <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" alt="{{ALT}}"></picture>
                                     </div>
                                 </div>
