--- a/src/site/templates/articles/partial/articles__card.htm
+++ b/src/site/templates/articles/partial/articles__card.htm
@@ -16,6 +16,6 @@
                                 </a>
                             </div>
                             <a href="{{LINK}}" class="news__item-image">
-                                <picture><source srcset="{{PREVIEWWEBP}}" type="image/webp"><img src="{{PREVIEW}}" class="cover-image" alt="{{ALT}}" title="{{ALT}}"></picture>
+                                <picture><source srcset="{{PREVIEWWEBP}}" type="image/webp"><img src="{{PREVIEWIMAGE}}" class="cover-image" alt="{{ALT}}" title="{{ALT}}"></picture>
                             </a>
                         </div>
