--- a/src/site/templates/company/company__stores.htm
+++ b/src/site/templates/company/company__stores.htm
@@ -171,12 +171,12 @@
                                     </div>
                                 </div>
                                 <div class="delivery__item-subtitle">
-                                    У нас на сайте предусмотрены различные удобные способы оплаты, чтобы вы могли выбрать наиболее подходящий для себя: Предусмотрены различные удобные способы оплаты, чтобы вы могли выбрать наиболее подходящий для себя:
+                                    Ценовая политика
                                 </div>
                                 <ul class="delivery__item-list list">
-                                    <li>Банковский перевод</li>
-                                    <li>Оплата при получении</li>
-                                    <li>Электронный платеж</li>
+                                    <li>Стоимость ниже конкурентных аналогов, ведь в производстве используется исключительно российское сырье</li>
+                                    <li>Отсутствуют дополнительные затраты на логистику </li>
+                                    <li>Возможность отгрузки с <strong>отсрочкой платежа</strong></li>
                                 </ul>
                             </div>
                         </div>
