--- a/src/site/templates/components/slider/slider-item.htm
+++ b/src/site/templates/components/slider/slider-item.htm
@@ -1,12 +1,11 @@
-<div class="benefits__slide benefits__slide-{{NUM}} swiper-slide">
-                        <div class="benefits__slide-image">
-                            <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" class="cover-image benefits__slide-bg" alt=""></picture>
-                        </div>
-                        <div class="benefits__slide-num">
-                            {{TITLE}}
-                        </div>
-                        <div class="benefits__slide-text">
-                            {{TEXT}}
-                        </div>
-                    </div>
+<div class="production__slide swiper-slide">
+                                        <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" class="cover-image" alt="{{ALT}}"></picture>
+                                        <div class="production__slide-info">
+                                            <{{HTAG}} class="production__slide-title title-lg">
+                                                {{TITLE}}
+                                            </{{HTAG}}>
+                                            <a href="{{LINK}}" class="production__slide-btn btn btn-orange">{{BUTTON}}</a>
+                                        </div>
+                                    </div>
+                          
                     
