--- a/src/site/templates/components/slider/slider.htm
+++ b/src/site/templates/components/slider/slider.htm
@@ -1,5 +1,9 @@
-<div class="benefits swiper-container">
-                <div class="benefits__wrapper swiper-wrapper">
-                    {{LIST}}
-                </div>               
-            </div>
+<div class="production__slider swiper">
+                                <div class="swiper-wrapper">
+                                    {{LIST}}
+                                </div>
+                                <div class="production__controls">
+                                    <button type="button" class="production__prev swiper-button-prev"></button>
+                                    <button type="button" class="production__next swiper-button-next"></button>
+                                </div>
+                            </div>
