--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -1,46 +1,11 @@
 <section class="production">
                     <div class="production__container">
                         <div class="production__body">
-                            <div class="production__slider swiper">
-                                <div class="swiper-wrapper">
-                                    <div class="production__slide swiper-slide">
-                                        <picture><source srcset="/img/scaling/01.webp"type="image/webp"><img src="/img/scaling/01.jpg" class="cover-image" alt="Производим арматуру для СИП"></picture>
-                                        <div class="production__slide-info">
-                                            <h1 class="production__slide-title title-lg">
-                                                Производим арматуру для&nbsp;СИП
-                                            </h1>
-                                            <a href="/production/" class="production__slide-btn btn btn-orange">Подробнее</a>
-                                        </div>
-                                    </div>
-                                    <div class="production__slide swiper-slide">
-                                        <picture><source srcset="/img/scaling/02.webp"type="image/webp"><img src="/img/scaling/02.jpg" class="cover-image" alt="Обновили парк оборудования"></picture>
-                                        <div class="production__slide-info">
-                                            <h1 class="production__slide-title title-lg">
-                                                Обновили парк оборудования
-                                            </h1>
-                                            <a href="/company/stores/" class="production__slide-btn btn btn-orange">Подробнее</a>
-                                        </div>
-                                    </div>
-                                    <div class="production__slide swiper-slide">
-                                        <picture><source srcset="/img/scaling/03.webp"type="image/webp"><img src="/img/scaling/03.jpg" class="cover-image" alt="Осуществляем комплексные поставки оборудования и материалов"></picture>
-                                        <div class="production__slide-info">
-                                            <h1 class="production__slide-title title-lg">
-                                                Осуществляем комплексные поставки <br>
-                                                оборудования и материалов
-                                            </h1>
-                                            <a href="/company/stores/" class="production__slide-btn btn btn-orange">Подробнее</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="production__controls">
-                                    <button type="button" class="production__prev swiper-button-prev"></button>
-                                    <button type="button" class="production__next swiper-button-next"></button>
-                                </div>
-                            </div>
+                            {{SLIDER}}
                             <div class="production__products">
                                 <a href="/production/" class="production__product">
                                     <span class="production__product-image">
-                                        <picture><source srcset="/img/scaling/product-1.webp"type="image/webp"><img src="/img/scaling/product-1.png" alt="product"></picture>
+                                        <picture><source srcset="/img/scaling/product-1.webp?1" type="image/webp"><img src="/img/scaling/product-1.png?1" alt="Арматура для СИП"></picture>
                                     </span>
                                     <span class="production__product-name">
                                         Собственное <br> производство арматуры для&nbsp;СИП
@@ -48,7 +13,7 @@
                                 </a>
                                 <a href="/company/stores/" class="production__product">
                                     <span class="production__product-image production__product-image-offset">
-                                        <picture><source srcset="/img/scaling/product-2.webp"type="image/webp"><img src="/img/scaling/product-2.png" alt="product"></picture>
+                                        <picture><source srcset="/img/scaling/product-2.webp?1" type="image/webp"><img src="/img/scaling/product-2.png?1" alt="Комплексные поставки"></picture>
                                     </span>
                                     <span class="production__product-name">
                                         Комплексные <br> поставки
